name: tests
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  build-depends: QuickCheck
               , hspec
               , base
               , containers
               , array
               , transformers
               , template-haskell
               , th-abstraction
               , generic-random
               , JuicyPixels
               , HTTP
               , http-types
               , text
               , bytestring
               , wai
               , warp
               , sqlite-simple
               , parallel
  other-modules: Examples.Bank
               , Examples.Phantom
               , Examples.Validation
               , Mooc.LimitedPrelude
               , Mooc.Todo
               , Mooc.VeryLimitedPrelude
               , Set1
               , Set2a
               , Set2b
               , Set3a
               , Set3b
               , Set4a
               , Set4b
               , Set5a
               , Set5b
               , Set6
               , Set7
               , Set8
               , Set9a
               , Set9b
               , Set10a
               , Set10b
               , Set11a
               , Set11b
               , Set12
               , Set13a
               , Set13b
               , Set14a
               , Set14b
               , Set15
               , Set16a
               , Set16b
               , Set1Test
               , Set2aTest
               , Set2bTest
               , Set3aTest
               , Set3bTest
               , Set4aTest
               , Set4bTest
               , Set5aTest
               , Set5bTest
               , Set6Test
               , Set7Test
               , Set8Test
               , Set9aTest
               , Set9bTest
               , Set10aTest
               , Set10bTest
               , Set11aTest
               , Set11bTest
               , Set12Test
               , Set13aTest
               , Set13bTest
               , Set14aTest
               , Set14bTest
               , Set15Test
               , Set16aTest
               , Set16bTest
  default-language: GHC2024
